force-app/main/default/objects/Product2/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOLT C.S.K 8X25 MM S/S</fullName>
            </value>
            <value>
                <fullName>HEXAGON FLANGE NUT 8 MM</fullName>
            </value>
            <value>
                <fullName>BOLT PAH 5X10 MM</fullName>
            </value>
            <value>
                <fullName>HEXAGON FLANGE NUT 5 MM</fullName>
            </value>
            <value>
                <fullName>BOLT C.S.K 5X10 MM</fullName>
            </value>
            <value>
                <fullName>PLASTIC MOUNTING KNOB</fullName>
            </value>
            <value>
                <fullName>PLASTI CLOCK</fullName>
            </value>
            <value>
                <fullName>HINGE STS 3</fullName>
            </value>
            <value>
                <fullName>FLAT BEEDING</fullName>
            </value>
            <value>
                <fullName>CUPPER STUD</fullName>
            </value>
            <value>
                <fullName>NUT 6 MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>