force-app/main/default/objects/Product2/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>Polycab</fullName>
            </value>
            <value>
                <fullName>schnider</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>L&amp;T</fullName>
            </value>
            <value>
                <fullName>CG Power</fullName>
            </value>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>Crompton</fullName>
            </value>
            <value>
                <fullName>IRIS</fullName>
            </value>
            <value>
                <fullName>Fibtron</fullName>
            </value>
            <value>
                <fullName>Clarco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>