force-app/main/default/objects/Product2/fields/Bundle_Price_with_Margin__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price_with_Margin__c</fullName>
    <formula>Bundle_Price__c +  Gross_Margin_Amount_for_Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Price with Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>