force-app/main/default/objects/Product2/fields/Bundle_Price_with_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price_with_Quantity__c</fullName>
    <label>Bundle Price with Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>