force-app/main/default/objects/Product2/fields/Bundle_Price_With_VAT__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Price_With_VAT__c</fullName>
    <label>Bundle Price With VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>