force-app/main/default/objects/Product2/fields/Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Quantity__c</fullName>
    <label>Bundle Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>