force-app/main/default/objects/Product2/fields/cgcloud__Asset_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to asset template.</description>
    <label>Asset Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Asset_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Asset_Template__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>