force-app/main/default/objects/Product2/fields/cgcloud__Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category__c</fullName>
    <description>Product category.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>Non-Wired Panel</fullName>
            </value>
            <value>
                <fullName>Q-Bus</fullName>
            </value>
            <value>
                <fullName>Wired Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>