force-app/main/default/objects/Product2/fields/cgcloud__Competitive_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Competitive_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a product as competitor&apos;s product.</description>
    <label>Competitor&apos;s Product</label>
    <type>Checkbox</type>
</CustomField>