force-app/main/default/objects/Product2/fields/cgcloud__Criterion_1_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Criterion_1_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product hierarchy related: Reference to product on Product_Level &apos;Category&apos;.</description>
    <inlineHelpText>Only product with &apos;Category&apos; product level can be selected</inlineHelpText>
    <label>Criterion 1 Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Product_Level__c</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Criterion 1 Product)</relationshipLabel>
    <relationshipName>Products01</relationshipName>
    <type>Lookup</type>
</CustomField>