force-app/main/default/objects/Product2/fields/cgcloud__Delivery_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Valid_From__c</fullName>
    <description>Delivery status valid from date.</description>
    <label>Delivery Valid From</label>
    <type>Date</type>
</CustomField>