force-app/main/default/objects/Product2/fields/cgcloud__Delivery_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delivery_Valid_Thru__c</fullName>
    <defaultValue>date(12,31,2099)</defaultValue>
    <description>Delivery status valid thru date.</description>
    <label>Delivery Valid Thru</label>
    <type>Date</type>
</CustomField>