force-app/main/default/objects/Product2/fields/cgcloud__Field_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Valid_Thru__c</fullName>
    <defaultValue>date(12,31,2099)</defaultValue>
    <description>Field status valid thru date.</description>
    <label>Field Valid Thru</label>
    <type>Date</type>
</CustomField>