force-app/main/default/objects/Product2/fields/cgcloud__Is_Bill_Of_Material_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Bill_Of_Material_Label__c</fullName>
    <formula>cgcloud__Is_Bill_Of_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOM</label>
    <type>Checkbox</type>
</CustomField>