force-app/main/default/objects/Product2/fields/cgcloud__KAM_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KAM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the specifies for a product on the lowest level of the product hierarchy, which is the corresponding product on planning level (Product Price Group level).</description>
    <label>KAM Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (KAM Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>