force-app/main/default/objects/Product2/fields/cgcloud__KAM_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KAM_Valid_From__c</fullName>
    <description>KAM status valid from date.</description>
    <label>KAM Valid From</label>
    <type>Date</type>
</CustomField>