force-app/main/default/objects/Product2/fields/cgcloud__KAM_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KAM_Valid_Thru__c</fullName>
    <defaultValue>date(12,31,2099)</defaultValue>
    <description>KAM status valid thru date.</description>
    <label>KAM Valid Thru</label>
    <type>Date</type>
</CustomField>