force-app/main/default/objects/Product2/fields/cgcloud__Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Level__c</fullName>
    <description>Describes the Product Level.</description>
    <label>Product Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>