force-app/main/default/objects/Product2/fields/cgcloud__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Type__c</fullName>
    <description>The type of the product.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>AssetType</fullName>
            </value>
            <value>
                <fullName>CountingGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>