force-app/main/default/objects/Product2/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4A</fullName>
            </value>
            <value>
                <fullName>5A</fullName>
            </value>
            <value>
                <fullName>14A</fullName>
            </value>
            <value>
                <fullName>16A</fullName>
            </value>
            <value>
                <fullName>20A</fullName>
            </value>
            <value>
                <fullName>25A</fullName>
            </value>
            <value>
                <fullName>35A</fullName>
            </value>
            <value>
                <fullName>40A</fullName>
            </value>
            <value>
                <fullName>44A</fullName>
            </value>
            <value>
                <fullName>53A</fullName>
            </value>
            <value>
                <fullName>60A</fullName>
            </value>
            <value>
                <fullName>63A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>