force-app/main/default/objects/Product2/fields/Gross_Margin_Amount_for_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Amount_for_Bundle__c</fullName>
    <formula>Gross_Margin__c * Bundle_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin Amount for Bundle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>