force-app/main/default/objects/Product2/fields/Item_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Item_Category_1__c</fullName>
    <label>Item Category-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACB</fullName>
            </value>
            <value>
                <fullName>ACB Accessories</fullName>
            </value>
            <value>
                <fullName>MCCB</fullName>
            </value>
            <value>
                <fullName>MCCB Accessories</fullName>
            </value>
            <value>
                <fullName>MCB</fullName>
            </value>
            <value>
                <fullName>RCCB</fullName>
            </value>
            <value>
                <fullName>PFR</fullName>
            </value>
            <value>
                <fullName>ELR</fullName>
            </value>
            <value>
                <fullName>EFR</fullName>
            </value>
            <value>
                <fullName>CAPASITOR</fullName>
            </value>
            <value>
                <fullName>CONTACTOR</fullName>
            </value>
            <value>
                <fullName>RELAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>