force-app/main/default/objects/Product2/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Boxes</fullName>
            </value>
            <value>
                <fullName>Bulb Holders</fullName>
            </value>
            <value>
                <fullName>Capacitors</fullName>
            </value>
            <value>
                <fullName>Extension Boxes</fullName>
            </value>
            <value>
                <fullName>Foot Lights</fullName>
            </value>
            <value>
                <fullName>Line Testers</fullName>
            </value>
            <value>
                <fullName>Plug Tops</fullName>
            </value>
            <value>
                <fullName>Multiplugs and Spike Guards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>