force-app/main/default/objects/Product2/fields/oppID__c.field-meta.xml
<CustomField>
    <fullName>oppID__c</fullName>
    <label>oppID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>