force-app/main/default/objects/Product2/fields/Orl_Default_Discount__c.field-meta.xml
<CustomField>
    <fullName>Orl_Default_Discount__c</fullName>
    <label>Default Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>