force-app/main/default/objects/Product2/fields/parent_Product__c.field-meta.xml
<CustomField>
    <fullName>parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (parent Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>