force-app/main/default/objects/Product2/fields/Poles__c.field-meta.xml
<CustomField>
    <fullName>Poles__c</fullName>
    <label>Poles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Pole</fullName>
            </value>
            <value>
                <fullName>3-Pole</fullName>
            </value>
            <value>
                <fullName>4-Pole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>