force-app/main/default/objects/Product2/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Bundle</label>
    <type>Checkbox</type>
</CustomField>