force-app/main/default/objects/Product2/fields/Product_price_With_Margin__c.field-meta.xml
<CustomField>
    <fullName>Product_price_With_Margin__c</fullName>
    <formula>Product_Price__c +  Gross_Margin_Amount_for_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product price With Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>