force-app/main/default/objects/Product2/fields/Unit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Unit_Notes__c</fullName>
    <label>Unit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>