force-app/main/default/objects/Product2/fields/Updated_Price_from_Line_item__c.field-meta.xml
<CustomField>
    <fullName>Updated_Price_from_Line_item__c</fullName>
    <label>Updated Price from Line item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>