force-app/main/default/objects/Product2/validationRules/cgcloud__Criterion_6_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Criterion_6_Product</fullName>
    <active>false</active>
    <description>Only product with &apos;Product&apos; product level can be selected</description>
    <errorConditionFormula>NOT(ISBLANK(cgcloud__Criterion_6_Product__c)) &amp;&amp; NOT(ISPICKVAL(cgcloud__Criterion_6_Product__r.cgcloud__Product_Level__c, &apos;Product&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Criterion_6_Product__c</errorDisplayField>
    <errorMessage>Only products with &apos;Product&apos; Product Level can be selected.</errorMessage>
</ValidationRule>