force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>cgcloud__Description_1_Language_1__c</columns>
    <columns>cgcloud__Consumer_Goods_Product_Code__c</columns>
    <columns>cgcloud__Product_Template__c</columns>
    <columns>cgcloud__GTIN__c</columns>
    <columns>cgcloud__State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>