force-app/main/default/objects/Product2/listViews/Product_Bundles_Repeater.listView-meta.xml
<ListView>
    <fullName>Product_Bundles_Repeater</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Bundle__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Bundle__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Product Bundles (Repeater)</label>
</ListView>