force-app/main/default/objects/Product2/listViews/Runner_Products.listView-meta.xml
<ListView>
    <fullName>Runner_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Bundle__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Runner Products</label>
</ListView>